# rust-lexical

./: .travis.yml  Cargo.toml
benches/: atof.rs  atof_malicious.rs  atof_real.rs  atoi.rs  ftoa.rs  itoa.rs
ci/: script.sh
lexical-benchmark/lexical/: Cargo.toml
lexical-benchmark/lexical/benches/: atof.rs
lexical-capi/: Cargo.toml  runtests.py
lexical-capi/include/: lexical.h  lexical.hpp  lexical.py
lexical-capi/src/: api.rs  builder.rs  config.rs  format.rs  lib.rs  option.rs  options.rs  result.rs
lexical-capi/tests/: CMakeLists.txt  test_c.cc  test_cc.cc  test_py.py
lexical-core/: Cargo.toml  README.md
lexical-core/src/: lib.rs
lexical-core/src/atof/: api.rs
lexical-core/src/atof/algorithm/: bhcomp.rs  bigcomp.rs  correct.rs  incorrect.rs  math.rs
lexical-core/src/atof/algorithm/format/: traits.rs
lexical-core/src/atoi/: api.rs  generic.rs
lexical-core/src/float/: float.rs  mod.rs  rounding.rs
lexical-core/src/ftoa/: api.rs  grisu2.rs  radix.rs
lexical-core/src/itoa/: api.rs
lexical-core/src/util/: builder.rs  config.rs  format.rs  mod.rs  options.rs  sequence.rs  test.rs  traits.rs
lexical-derive/: Cargo.toml
src/: lib.rs
